Fix Dark Mode in auth screens

--- a/src/styles/auth.scss
+++ b/src/styles/auth.scss
@@ -36,7 +36,7 @@
 }
 
 .auth {
-  background: $theme-brand-gradient;
+  background: $dark-theme-gray-darkest;
   display: flex;
   justify-content: center;
 
